eZ Online Editor 5.x extension Changelog

5.1.1
- Fixed bug #16554: Applying table cell settings to row or column does not affect table headings
- Fixed bug #16605: Online Editor adds a lot of Non Breaking spaces (nbsp)
  (merged from trunk rev. 206)
- Fixed bug #16271: Links containing special characters are not stored correctly


5.1.0
* Fixed bug #16469: embedding objects in another language causes serious problems in following not-translateable attributes

5.1.0rc1
* Fixed bug #16373: TC-52 - Online Editor: The indented bullets (sorted and not sorted) are not being displayed as expected on preview

5.1.0beta2:
* Fixed #16271: Links containing special characters are not stored correctly

5.1.0beta1:
* Fixed #15872: suggestions of spell checker have the wrong encoding
* Added ezoe.ini setting for setting directionality

5.1.0alpha1:
* Fixed translation of anchor Name attribute
* Implemented inline phpdoc for classes and functions
* Fixed translation of link link-type and view selections
* Implemented #14424: Improvements of list of link types
* Enable sub / sup / justify buttons by default and disable justify buttons on 4.0.x
* Pack javascript files used in dialogs to speed up the dialogs a bit
* Fixed bug #14649: IE inserts hostname when protocol is wrong
* Added jpn-JP translation
* Fixed bug #14670: Embed relations are not removed when embed tag is
  IMPORTANT: Apply update/database/5.0/dbupdate-5.0.0-to-5.0.1.sql to fix 
  inconsistency in database (if you have used ezoe prior to version 5.0.1)
* Updated Tango icons to v0.8.90
* Added support for IsInline[<tag>]=image setting for custom tags with no content (or actual images)
* Allow siteaccess to override ezoe.ini SkinVariant setting
* Fixed #14728: Space between links are removed
* Fixed #14799: Javascript error when adding an image that needs to be approved
* Fixed: extra empty paragraphs generated when inserting embed object and literal tags