@@ -5,6 +5,8 @@ eZ Online Editor 5.x extension Changelog
 - Fixed bug #16605: Online Editor adds a lot of Non Breaking spaces (nbsp)
   (merged from trunk rev. 206)
 - Fixed bug #16271: Links containing special characters are not stored correctly
+- Fixed bug #016725: Check hasContent on image object attribute before it is used
+  (merged from trunk rev. 226)
 
 
 5.1.0
